--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,600,700');
 body {
     font-family: 'Poppins', sans-serif;
-    line-height: 1.8;
+    line-height: 2;
 }
 img {
     max-width: 100%;
 }
 
 .large-height {
-    min-height: 80vh;
+    min-height: 90vh;
+}
+.smaller-height {
+    min-height: 60vh;
 }
 .hero {
     min-height: calc(100vh - 63px);
@@ -22,7 +25,8 @@ img {
     color:#329BFF;
 }
 p {
-    color: darkgray;    
+    color: #606060;
+    font-size: 1.1rem;
 }
 .h-color{
     color:#329BFF;
@@ -30,19 +34,38 @@ p {
 .h4-color{
     color:#329BFF;
 }
+
+#section2 img{
+    max-width: 500px;
+    display: block;
+    margin: auto;
+    margin-bottom: 30px;
+}
 /* .section2{
     padding-left: 120px;
 } */
 .header{
     text-align: center;
-    
-    
+}
+.hero svg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+    height: 50vw;
 }
 
+.hero h3 {
+    font-size: 5rem;
+}
+
+.container {
+    width: 90% !important;
+    max-width: none !important;
+
+}
 .icon {
-    
     height: 65px;
-    
 }
 
 ul li{
@@ -54,4 +77,8 @@ ul li{
 }
 .img-top {
     width: 200px;
+}
+
+.btn-shadow {
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
