--- a/css/style.css
+++ b/css/style.css
@@ -144,3 +144,13 @@ h2 {
 .pricing-section {
     min-height: 250px;
 }
+
+a {
+    text-decoration: none;
+    color: rgb(33, 37, 41);
+}
+
+a :hover{
+  text-decoration: none;
+  color: rgb(33, 37, 41);
+}
